--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Charts Project</title>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700;800;900&amp;display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="<%=htmlWebpackPlugin.files.css %>">
 </head>
 
-<body style="max-width: 100vw;">
+<body>
 
-  <h1>D3-based charts</h1>
+  <div class="container">
 
-  <h2>Chart #1</h2>
+    <h1>D3-based charts</h1>
 
-  <div id="graf1" class="graf"></div>
+    <h2>Chart #1</h2>
+    <div id="graf1" class="graf"></div>
 
-  <h2>Chart #2</h2>
-  <div id="graf2" class="graf"></div>
+    <h2>Chart #2</h2>
+    <div id="graf2" class="graf"></div>
+
+  </div>
 
   <script src="<%=htmlWebpackPlugin.files.js %>"></script>
 
