--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,43 @@
 
   <div class="container">
 
-    <h1>D3-based charts</h1>
+    <h1>Demo Charts</h1>
 
-    <h2>Chart #1</h2>
-    <div id="graf1" class="graf"></div>
+    <h2>Life Expectancy</h2>
+    <div id="chart-life-expectancy" class="graf"></div>
 
-    <h2>Chart #2</h2>
-    <div id="graf2" class="graf"></div>
+
+    <h2>Marriages</h2>
+    <div id="chart-marriages" class="graf"></div>
+
+
+    <h2>Divorces</h2>
+    <div id="chart-divorces" class="graf"></div>
+
+
+    <h2>Fertility Rate</h2>
+    <div id="chart-fertility-rate" class="graf"></div>
+
+
+    <h2>Share Of Urban Population</h2>
+    <div id="chart-urban-population" class="graf"></div>
+
+
+    <h2>Mobile subscriptions</h2>
+    <div id="chart-mobile-subscriptions" class="graf"></div>
+
+
+    <h2>Fixed phone subscriptions</h2>
+    <div id="chart-fixed-subscriptions" class="graf"></div>
+
+
+    <h2>Share Of Population Using The Internet</h2>
+    <div id="chart-internet-population" class="graf"></div>
+
+
+    <h2>Share Of Population With Tertiary Education</h2>
+    <div id="chart-education-population" class="graf"></div>
+
 
   </div>
 
